# lingulu-machine-learning

./: .dockerignore  .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  PRONUNCIATION_UPGRADE.md  QUICK_START.md  README.md  STREAMING_MODE.md  docker-compose.yaml  example_usage.py  monitor_hf_deployment.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.py  test_hf_deployment.py
.github/workflows/: cd.yml  ci.yml
app/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  config.py  requirements.txt
app/config/: README.md  __init__.py  settings.py
app/middleware/: __init__.py  auth.py  cloudwatch_metrics.py  metrics.py
app/models/: __init__.py  wav2vec2_model.py
app/routes/: __init__.py  health.py  metrics.py  predict.py
app/utils/: __init__.py  audio_processor.py  exceptions.py  gop_calculator.py  logger.py  metrics.py  phoneme_converter.py
model/: config.py  data_collator.py  data_loader.py  metrics.py  model.py  pronunciation_scoring.py  train.py  visualization.py
notebooks/: audio_converter.ipynb  dataset_sampling.ipynb  eda.ipynb  eda_l2_arctic.ipynb  eda_librispeech.ipynb  model_evaluate_v3.ipynb  model_evaluation_v3.ipynb
notebooks/models/v1/: model_fine_tune.ipynb  train_history.csv
notebooks/models/v2/: model_finetune.ipynb  train_history.csv
notebooks/models/v3/: model_finetune.ipynb  train_history.csv
tests/unit/: test_all.py
