[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingulu-ml"
version = "1.0.0"
description = "Lingulu Machine Learning API for pronunciation assessment"
authors = [{name = "Lingulu Team"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Flask>=3.1.2",
    "Werkzeug>=3.1.5",
    "gunicorn>=23.0.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "numpy>=2.4.2",
    "g2p-en>=2.1.0",
    "nltk>=3.9.1",
    "huggingface_hub>=1.4.1",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "boto3>=1.36.19",
    "botocore>=1.36.19",
    "click>=8.3.1",
    "tqdm>=4.67.3",
    "regex>=2026.1.15",
    "PyYAML>=6.0.3",
    "packaging>=26.0",
    "filelock>=3.20.3",
    "fsspec>=2026.2.0",
    "typer-slim>=0.21.1",
    "typing_extensions>=4.15.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.3",
    "blinker>=1.9.0",
    "colorama>=0.4.6",
    "itsdangerous>=2.2.0",
    "mpmath>=1.3.0",
    "networkx>=3.6.1",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "locust>=2.20.0",
    "types-requests>=2.31.0.20240125",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
